--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost/sweater
+spring.datasource.username=postgres
+spring.datasource.password=master
+spring.jpa.generate-ddl=true
 
+#spring.mustache.servlet.expose-request-attributes=true
