--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=master
 spring.jpa.generate-ddl=true
 
+
 #spring.mustache.servlet.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
+#spring.freemarker.suffix: .ftl
