--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.jpa.generate-ddl=true
 
 #spring.mustache.servlet.expose-request-attributes=true
 spring.freemarker.expose-request-attributes=true
-#spring.freemarker.suffix: .ftl
+
+#upload.path=D://tmp//files
+upload.path=C://Users//denis//IdeaProjects//letscode//sweater//img
+#upload.path=uploads//test
